key.core/src/test/resources/de/uka/ilkd/key/java/coverage/rejected/var-reference-type/VarString.java
public class VarString {
    int f() { var s = "hi"; return s.length(); }
}
